@@ -57,10 +57,15 @@ $net2ftp_settings["admin_password"] = "";
 
 $net2ftp_settings["message_browse"] = "";
 
+// ----------------------------------------------------------------------------------
+// FTP-Server (hardcoded)
+// ----------------------------------------------------------------------------------
+
+$net2ftp_globals["ftpserver"] = "127.0.0.1";
 
 // ----------------------------------------------------------------------------------
-// A MySQL database is optional. It can be used for: logging the users, 
-// checking the consumption of network and server resources (data transfer 
+// A MySQL database is optional. It can be used for: logging the users,
+// checking the consumption of network and server resources (data transfer
 // volume and script execution time), and checking the user's home directory
 // ----------------------------------------------------------------------------------
 
@@ -124,7 +129,7 @@ $net2ftp_settings["application_build_nr"] = "43";
 // Is this net2ftp.com, or a net2ftp installation elsewhere
 $net2ftp_settings["net2ftpdotcom"] = "no";
 
-// Google Adsense advertisements 
+// Google Adsense advertisements
 // Not shown when using HTTPS to avoid warnings on each pageload
 $net2ftp_settings["show_google_ads"] = "no";
 
